--- a/index.html
+++ b/index.html
@@ -1677,112 +1677,86 @@
 </div>
 </div>
 </section> <!-- end .domains-container -->
-<section aria-labelledby="domains-title" class="section" id="about">
-<h2 class="section-title" id="domains-title">Our Domains</h2>
-<div class="domains-container">
-<article aria-label="Clinical Research domain card" class="domain-card" tabindex="0">
-<h3>Research Director</h3>
-<p>This domain will oversee all research related matters of SRC including mentorship of the students in their research projects, IRB facilitation, Editorial board, ethics and review board and a student research journal.</p>
-</article>
-<article aria-label="Basic Sciences domain card" class="domain-card" tabindex="0">
-<h3>IRB Facilitator</h3>
-<p>Guides students in preparing ethical approval applications.
-Coordinates with institutional boards for review processes.
-Ensures compliance with ethical standards in research.</p>
-</article>
-<article aria-label="Basic Sciences domain card" class="domain-card" tabindex="0">
-<h3>Editorial Board</h3>
-<p>Oversees manuscript quality, formatting, and review process.
-Provides students editorial training and critical evaluation skills.
-Ensures smooth functioning of the student research journal.</p>
-</article>
-<article aria-label="Basic Sciences domain card" class="domain-card" tabindex="0">
-<h3>Ethics &amp; Review</h3>
-<p>
-Promotes integrity and ethical conduct in research activities.
-Reviews proposals for adherence to ethical norms.
-Builds awareness of research ethics among members.</p>
-</article>
-<article aria-label="Basic Sciences domain card" class="domain-card" tabindex="0">
-<h3>Journal</h3>
-<p>Manages the student research journal’s publication process.
-Collaborates with editorial and graphics domains.
-Provides a platform for showcasing student research work</p>
-</article></div>
-<div>
-</div></section>
-<section aria-labelledby="domains-title" class="section">
-<h2 class="section-title" id="domains-title">Our Domains</h2>
-<div class="domains-container">
-<article aria-label="Clinical Research domain card" class="domain-card" tabindex="0">
-<h3>Research Director</h3>
-<p>This domain will oversee all research related matters of SRC including mentorship of the students in their research projects, IRB facilitation, Editorial board, ethics and review board and a student research journal.</p>
-</article>
-<article aria-label="Basic Sciences domain card" class="domain-card" tabindex="0">
-<h3>IRB Facilitator</h3>
-<p>Guides students in preparing ethical approval applications.
-Coordinates with institutional boards for review processes.
-Ensures compliance with ethical standards in research.</p>
-</article>
-<article aria-label="Basic Sciences domain card" class="domain-card" tabindex="0">
-<h3>Editorial Board</h3>
-<p>Oversees manuscript quality, formatting, and review process.
-Provides students editorial training and critical evaluation skills.
-Ensures smooth functioning of the student research journal.</p>
-</article>
-<article aria-label="Basic Sciences domain card" class="domain-card" tabindex="0">
-<h3>Ethics &amp; Review</h3>
-<p>
-Promotes integrity and ethical conduct in research activities.
-Reviews proposals for adherence to ethical norms.
-Builds awareness of research ethics among members.</p>
-</article>
-<article aria-label="Basic Sciences domain card" class="domain-card" tabindex="0">
-<h3>Journal</h3>
-<p>Manages the student research journal’s publication process.
-Collaborates with editorial and graphics domains.
-Provides a platform for showcasing student research work</p>
-</article></div>
-<div>
-</div></section>
-<section aria-labelledby="domains-title" class="section">
-<h2 class="section-title">Our Domains</h2>
-<div class="domains-container">
-<article aria-label="Clinical Research domain card" class="domain-card" tabindex="0">
-<h3>Research Director</h3>
-<p>This domain will oversee all research related matters of SRC including mentorship of the students in their research projects, IRB facilitation, Editorial board, ethics and review board and a student research journal.</p>
-</article>
-<article aria-label="Basic Sciences domain card" class="domain-card" tabindex="0">
-<h3>IRB Facilitator</h3>
-<p>Guides students in preparing ethical approval applications.
-Coordinates with institutional boards for review processes.
-Ensures compliance with ethical standards in research.</p>
-</article>
-<article aria-label="Basic Sciences domain card" class="domain-card" tabindex="0">
-<h3>Editorial Board</h3>
-<p>Oversees manuscript quality, formatting, and review process.
-Provides students editorial training and critical evaluation skills.
-Ensures smooth functioning of the student research journal.</p>
-</article>
-<article aria-label="Basic Sciences domain card" class="domain-card" tabindex="0">
-<h3>Ethics &amp; Review</h3>
-<p>
-Promotes integrity and ethical conduct in research activities.
-Reviews proposals for adherence to ethical norms.
-Builds awareness of research ethics among members.</p>
-</article>
-<article aria-label="Basic Sciences domain card" class="domain-card" tabindex="0">
-<h3>Journal</h3>
-<p>Manages the student research journal’s publication process.
-Collaborates with editorial and graphics domains.
-Provides a platform for showcasing student research work</p>
-</article></div>
-<div>
-<!-- centralized apply button -->
-<div aria-hidden="false" class="centralized-apply-container">
-<a aria-label="Apply Now" class="centralized-apply-btn" href="/apply" role="button">Apply Now</a>
-</div>
-</div></section>
+    <!-- ================== Research Domain ================== -->
+<section class="section" id="research-domains" aria-labelledby="research-title">
+  <h2 class="section-title" id="research-title">Research Domain</h2>
+  <div class="domains-grid">
+    <article class="domain-card" tabindex="0">
+      <h3>Letter to the Editor</h3>
+      <p>Short, focused communications that highlight timely clinical observations, responses to published work, or concise evidence summaries. Ideal for students to practice brief scientific writing and rapid dissemination.</p>
+    </article>
+    <article class="domain-card" tabindex="0">
+      <h3>Cross-Sectional Studies</h3>
+      <p>Design and analysis of cross-sectional research exploring prevalence and associations. Mentorship available for study design, sampling, data collection, and interpretation of results.</p>
+    </article>
+    <article class="domain-card" tabindex="0">
+      <h3>Meta-Analysis</h3>
+      <p>Guidance on systematic review methodology, pooling data, and interpreting heterogeneity. We support literature search strategies, extraction, and meta-analytic tools.</p>
+    </article>
+    <article class="domain-card" tabindex="0">
+      <h3>CDC WONDER</h3>
+      <p>Training on using public datasets such as CDC WONDER for epidemiologic analyses, mortality trends, and population-level research suitable for student projects.</p>
+    </article>
+    <article class="domain-card" tabindex="0">
+      <h3>Literature Review</h3>
+      <p>Structured and narrative literature reviews: topic selection, search protocols, evidence synthesis, and producing publishable review manuscripts.</p>
+    </article>
+  </div>
+</section>
+
+<!-- ================== Ancillary Research ================== -->
+<section class="section" id="ancillary-domains" aria-labelledby="ancillary-title">
+  <h2 class="section-title" id="ancillary-title">Ancillary Research</h2>
+  <div class="domains-grid">
+    <article class="domain-card" tabindex="0">
+      <h3>Editorial Board</h3>
+      <p>Oversees manuscript quality, formatting, and review process. Provides students editorial training and critical evaluation skills. Ensures smooth functioning of the student research journal.</p>
+    </article>
+    <article class="domain-card" tabindex="0">
+      <h3>IRB Facilitation</h3>
+      <p>Guides students in preparing ethical approval applications. Coordinates with institutional boards for review processes. Ensures compliance with ethical standards in research.</p>
+    </article>
+    <article class="domain-card" tabindex="0">
+      <h3>Ethics &amp; Review</h3>
+      <p>Promotes integrity and ethical conduct in research activities. Reviews proposals for adherence to ethical norms. Builds awareness of research ethics among members.</p>
+    </article>
+    <article class="domain-card" tabindex="0">
+      <h3>Journal</h3>
+      <p>Manages the student research journal’s publication process. Collaborates with editorial and graphics domains. Provides a platform for showcasing student research work.</p>
+    </article>
+  </div>
+</section>
+
+<!-- ================== Organizational Domain ================== -->
+<section class="section" id="org-domains" aria-labelledby="org-title">
+  <h2 class="section-title" id="org-title">Organizational Domain</h2>
+  <div class="domains-grid">
+    <article class="domain-card" tabindex="0">
+      <h3>E-Magazine &amp; Publications</h3>
+      <p>Publishes society updates, research highlights, and creative content. Engages members through regular magazine issues. Promotes scientific communication and outreach.</p>
+    </article>
+    <article class="domain-card" tabindex="0">
+      <h3>Graphics &amp; Tech</h3>
+      <p>Designs visuals, infographics, and digital media for SRC. Supports research presentations with technical expertise. Ensures attractive and effective communication materials.</p>
+    </article>
+    <article class="domain-card" tabindex="0">
+      <h3>Data &amp; Logistics</h3>
+      <p>Manages society records, databases, and data storage. Ensures smooth logistics for events and projects. Provides analytical support to research teams.</p>
+    </article>
+    <article class="domain-card" tabindex="0">
+      <h3>Outreach &amp; Collaboration</h3>
+      <p>Builds partnerships with institutions and external societies. Promotes SRC activities through external engagement. Expands networking and collaborative research opportunities.</p>
+    </article>
+    <article class="domain-card" tabindex="0">
+      <h3>Human Resource Management (HRM)</h3>
+      <p>Recruits, trains, and manages society members. Ensures active participation and skill development. Maintains harmony and productivity within the society.</p>
+    </article>
+    <article class="domain-card" tabindex="0">
+      <h3>Conference &amp; Events</h3>
+      <p>Organizes academic events, workshops, and conferences. Coordinates decor and event execution with volunteers. Showcases SRC’s work on broader academic platforms.</p>
+    </article>
+  </div>
+</section>
 <!-- Added Mission & Goals section with white background -->
 <section aria-labelledby="mission-title" class="section" id="mission" style="background: white; padding: 4rem 0;">
 <div class="container">
