--- a/index.html
+++ b/index.html
@@ -1625,6 +1625,68 @@
 @media (min-width: 769px) {
   .mobile-menu { display: none; }
 }
+    /* Responsive grid for domains */
+.domains-grid {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 1.25rem;
+  align-items: start;
+  padding: 0.6rem 1rem;
+  box-sizing: border-box;
+}
+
+/* Domain card styling */
+.domain-card {
+  height: auto;
+  padding: 1.1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  border-radius: 14px;
+  box-shadow: 0 8px 24px rgba(15, 23, 42, 0.06);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.95), rgba(250, 250, 255, 0.9));
+  border: 1px solid rgba(17, 17, 17, 0.06);
+  transition: transform 0.2s ease;
+}
+
+.domain-card:hover {
+  transform: translateY(-6px);
+}
+
+.domain-card h3 {
+  margin: 0 0 0.6rem;
+  font-size: 1.15rem;
+  text-align: left;
+  color: var(--primary, #1e40af);
+  font-weight: 800;
+}
+
+.domain-card p {
+  margin: 0;
+  color: var(--ink-soft, #444);
+  font-size: 0.96rem;
+  line-height: 1.45;
+}
+
+/* Mobile: one column, no horizontal scroll */
+@media (max-width: 768px) {
+  .domains-grid {
+    grid-template-columns: 1fr;
+    padding: 0.6rem 0.9rem;
+    gap: 0.85rem;
+  }
+  .domain-card {
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
+  }
+  /* Disable any leftover horizontal scrolling */
+  body, html {
+    overflow-x: hidden !important;
+  }
+}
 </style></head>
 <body>
 <div aria-hidden="true" class="scroll-progress" id="scrollProgress"></div>
