--- a/index.html
+++ b/index.html
@@ -1827,6 +1827,130 @@
 @media (max-width: 420px) {
   .domain-card { flex: 0 0 88%; min-width: 88%; max-width: 88%; height: 360px; }
 }
+    /* ===== Domains: centered-last-row + equal-height cards ===== */
+.domains-grid {
+  max-width: 1200px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  padding: 0.6rem 1rem;
+
+  /* Grid columns: auto-fit with a max column width so leftover columns collapse,
+     and the whole set of columns can be centered within the container. */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 300px));
+  gap: 1.25rem;
+  align-items: start;
+
+  /* THIS centers the grid tracks horizontally, so an incomplete final row is centered */
+  justify-content: center;
+  justify-items: stretch; /* make cards fill their column width */
+}
+
+/* Card: equal height, centered content */
+.domain-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 1.25rem;
+  min-height: 320px;      /* equal visual height */
+  border-radius: 14px;
+  box-shadow: 0 8px 24px rgba(15, 23, 42, 0.06);
+  background: linear-gradient(180deg, rgba(255,255,255,0.98), rgba(250,250,255,0.95));
+  border: 1px solid rgba(17,17,17,0.06);
+  transition: transform 0.18s ease, box-shadow 0.18s ease;
+  box-sizing: border-box;
+}
+
+/* Make the content area flexible so the button sits nicely at the bottom */
+.card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.6rem;
+  flex: 1 1 auto;
+  width: 100%;
+}
+
+/* Heading and paragraph */
+.domain-card h3 {
+  margin: 0;
+  font-size: 1.15rem;
+  color: var(--primary, #1e40af);
+  font-weight: 800;
+}
+
+.domain-card p {
+  margin: 0;
+  color: var(--ink-soft, #444);
+  font-size: 0.95rem;
+  line-height: 1.45;
+  padding: 0 0.25rem;
+}
+
+/* Apply button */
+.apply-btn {
+  display: inline-block;
+  margin-top: 0.85rem;
+  padding: 0.58rem 1rem;
+  border-radius: 10px;
+  background: linear-gradient(180deg, var(--primary, #1e40af), color-mix(in srgb, var(--primary, #1e40af) 80%));
+  color: #fff;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 0.95rem;
+  box-shadow: 0 6px 18px rgba(30, 64, 175, 0.12);
+  transition: transform 0.14s ease, box-shadow 0.14s ease, opacity 0.14s ease;
+  align-self: center;
+}
+
+/* Hover/Focus effects */
+.domain-card:hover { transform: translateY(-6px); }
+.apply-btn:hover, .apply-btn:focus { transform: translateY(-3px); }
+
+/* ===== Mobile: horizontal scroll + snap (keeps your previous behavior) ===== */
+@media (max-width: 768px) {
+  .domains-grid {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    overflow-x: auto;
+    padding: 0.6rem 1rem;
+    -webkit-overflow-scrolling: touch;
+    scroll-snap-type: x mandatory;
+    align-items: stretch;
+    justify-content: flex-start; /* on mobile we want natural left-to-right scroll */
+  }
+
+  .domain-card {
+    flex: 0 0 82%;          /* visible width of each card on mobile; tweak if you want more peek */
+    min-width: 82%;
+    max-width: 82%;
+    scroll-snap-align: center;
+    margin: 0;
+    height: 380px;          /* fixed equal height on mobile */
+  }
+
+  /* Optional scrollbar visuals */
+  .domains-grid { scrollbar-width: thin; }
+  .domains-grid::-webkit-scrollbar { height: 9px; }
+  .domains-grid::-webkit-scrollbar-track { background: transparent; }
+  .domains-grid::-webkit-scrollbar-thumb { background: rgba(0,0,0,0.12); border-radius: 999px; }
+
+  /* Ensure mobile allows horizontal scroll (remove any global overflow-x:hidden if present) */
+  html, body { overflow-x: visible !important; }
+}
+
+/* Accessibility focus */
+.domain-card:focus {
+  outline: 3px solid color-mix(in srgb, var(--primary, #1e40af) 30%, white);
+  outline-offset: 4px;
+}
+
+/* Slight adjustment for very small phones */
+@media (max-width: 420px) {
+  .domain-card { flex: 0 0 88%; min-width: 88%; max-width: 88%; height: 360px; }
+}
     
 </style></head>
 <body>
